objects/cic_credit__Credit_Application__c.object
<CustomObject>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Credit Applications</relationshipLabel>
        <relationshipName>CreditApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Applications</relationshipLabel>
        <relationshipName>Credit_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Co_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Borrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Applications (Co-Borrower)</relationshipLabel>
        <relationshipName>Credit_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Bureaus__c</fullName>
        <label>Credit Bureaus</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>Transunion</fullName>
                </value>
                <value>
                    <fullName>Tri-Merge</fullName>
                    <isActive>false</isActive>
                    <label>Tri-Merge</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Fraud_Check__c</fullName>
        <label>Fraud Check</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>Transunion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard</fullName>
                    <default>true</default>
                    <label>Hard</label>
                </value>
                <value>
                    <fullName>Soft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cic_credit__Response_Message__c</fullName>
        <label>Response Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Score__c</fullName>
        <label>Score</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax-True</fullName>
                </value>
                <value>
                    <fullName>Experian-True</fullName>
                </value>
                <value>
                    <fullName>Transunion-True</fullName>
                </value>
                <value>
                    <fullName>Equifax-False</fullName>
                </value>
                <value>
                    <fullName>Experian-False</fullName>
                </value>
                <value>
                    <fullName>Transunion-False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Status_Code__c</fullName>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Status__c</fullName>
        <label>Status</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Credit Application</label>
    <listViews>
        <fullName>cic_credit__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Credit Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>